--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "automation-backend-plus",
-  "version": "1.2.0",
-  "description": "Internal engine backend with extra connectors and triggers",
+  "name": "automation-builder-backend",
+  "version": "1.1.0",
+  "private": true,
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": { "node": ">=18" },
   "dependencies": {
-    "@slack/web-api": "^7.9.3",
-    "axios": "^1.11.0",
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-session": "^1.18.2",
-    "googleapis": "^155.0.1",
-    "helmet": "^8.1.0",
-    "imapflow": "^1.0.194",
-    "mailparser": "^3.7.4",
-    "morgan": "^1.10.1",
-    "mustache": "^4.2.0",
-    "node-cron": "^4.2.1",
-    "node-fetch": "^2.7.0",
-    "nodemailer": "^7.0.5",
-    "openai": "^5.13.1",
-    "twilio": "^5.8.0"
+    "express": "^4.19.2",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^133.0.0",
+    "morgan": "^1.10.0",
+    "twilio": "^4.22.0"
   }
 }
