--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,39 @@
 {
   "name": "automation-builder-backend",
-  "version": "1.4.0",
-  "private": true,
+  "version": "1.0.0",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "engines": { "node": ">=18" },
   "dependencies": {
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^6.0.0",
+    "express-validator": "^7.0.0",
     "google-auth-library": "^9.0.0",
     "googleapis": "^133.0.0",
+    "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "twilio": "^4.22.0"
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.0",
+    "twilio": "^4.22.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.19.13",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.4"
   }
 }
