--- a/backend/package.json
+++ b/backend/package.json
@@ -1,39 +1,35 @@
 {
   "name": "automation-builder-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
   "type": "commonjs",
+  "description": "Automation Builder backend (Express + Google APIs + Gmail→Sheets pipeline)",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "test": "echo \"(tests not configured)\" && exit 0"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^6.0.0",
-    "express-validator": "^7.0.0",
-    "google-auth-library": "^9.0.0",
+    "express-rate-limit": "^6.11.2",
+    "express-validator": "^7.2.1",
+    "google-auth-library": "^9.14.1",
     "googleapis": "^133.0.0",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.0",
-    "twilio": "^4.22.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.17.0"
+    "nodemailer": "^6.9.14",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.13",
-    "eslint": "^8.57.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^6.3.4"
+    "nodemon": "^3.1.4"
   }
 }
