Fix: Remove problematic image_utils import and fix save_plan call

--- a/OneDrive/שולחן העבודה/ConTech/.gitignore
+++ b/OneDrive/שולחן העבודה/ConTech/.gitignore
@@ -1,64 +1,4 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Logs and CSV
-*.log
-*.csv
-project_log.csv
-
-# Debug images
-debug_*.png
-*.png
-*.jpg
-*.jpeg
-
-# Secrets and API keys
 .streamlit/secrets.toml
-key.txt
-*.key
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Temporary files
-*.tmp
-temp/
-tmp/
-
-# PDF files (optional - uncomment if you don't want to commit PDFs)
-# *.pdf
+__pycache__/
+*.db
+.env
