Fix: Remove image_utils import and fix save_plan parameters

--- a/OneDrive/שולחן העבודה/ConTech/requirements.txt
+++ b/OneDrive/שולחן העבודה/ConTech/requirements.txt
@@ -1,7 +1,8 @@
-pymupdf
+streamlit==1.38.0
+streamlit-drawable-canvas==0.9.3
 opencv-python-headless
 pandas
 numpy
-streamlit
-streamlit-drawable-canvas
+pymupdf
 groq
+watchdog
